HANDELP-43 Fixed issue with slider getting cut off

--- a/react/src/pancreatlas/Pancreatlas.css
+++ b/react/src/pancreatlas/Pancreatlas.css
@@ -523,3 +523,7 @@ div.image-matrix-content {
   padding-left: 0;
   width: 98.9vw;
 }
+
+div.ReactCollapse--collapse {
+  overflow: visible !important;
+}
